fix game activity overflowing on chat on smaller screens

--- a/AlanWalkerTheme/visual-refresh/trivia/panels.css
+++ b/AlanWalkerTheme/visual-refresh/trivia/panels.css
@@ -67,5 +67,15 @@
       border-top-right-radius: var(--border-radius-xl);
       backdrop-filter: blur(2px);
     }
+    .activityPanel_c48ade {
+      background: var(--back-user-area);
+      margin-bottom: 0;
+      width: var(--custom-guild-list-width);
+      box-sizing: border-box;
+  
+      &:hover {
+        width: fit-content;
+      }
+    }
   }
 }
